--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -16,6 +16,6 @@ command-message:
   - '&6================================'
   - ' &9指令列表:'
   - '    &d- &ehelp &5—— &a显示帮助.'
-  - '    &d- &ejs &b{ 脚本路径::函数名 } (参数) &5—— &a调用一个脚本(函数)'
+  - '    &d- &erun &b脚本路径 函数名 (参数) &5—— &a运行一个脚本(函数)'
   - '    &d- &ereload &5—— &a重载插件'
   - '  &6================================'
