--- a/src/main/resources/lang/en_US.yml
+++ b/src/main/resources/lang/en_US.yml
@@ -2,10 +2,11 @@ plugin-prefix: '&d[&9Pouvoir&d] '
 plugin-debug: '&d[&9Pouvoir-Debug&d] '
 command-reload: '&d[&9Pouvoir&d] &aPouvoir have been reloaded!'
 command-script-invoke: '&d[&9Pouvoir&d] &aInvoking Script &6{0} &a!'
+command-script-invoke-end: "&d[&9Pouvoir&d] &eInvocation of &6{0} &ereturn: &b{0} &e, in &9{1}ms"
 command-script-wrong: '&d[&9Pouvoir&d] &cThere was an error during invoking the script &6{0} &c!'
 static-class-not-found: '&d[&9Pouvoir&d] &cThe class &6{0} &cdosen`t exist!'
 script-compile-start: '&d[&9Pouvoir&d] &aStart to compile &6{0}&a...'
-script-compile-end: '&d[&9Pouvoir&d] &aCompiled successfully in &9{0}ms!'
+script-compile-end: '&d[&9Pouvoir&d] &aCompiled &6{0} &asuccessfully in &9{1}ms!'
 script-compile-fail: '&d[&9Pouvoir&d] &cThere was an error during compiling the script &6{0} &c! Please check.'
 script-file-not-found: '&d[&9Pouvoir&d] &cCan t found the script file &6{0} &c! Please check.'
 script-invoke-script-exception: '&d[&9Pouvoir&d] &cThere was a error while invoke the function &6{0} &cof &d{1} &c! &7(maybe you invoke a function that doesn t exist)'
@@ -19,9 +20,16 @@ command-message:
   - '&6================================'
   - ' &9Command List:'
   - '    &d- &ehelp &5—— &aShow the help of command'
+  - '    &d- &einfo &5—— &aShow the info of Pouvoir.'
   - '    &d- &erun &bscript file path function (args) &5—— &aRun a function of a script'
+  - '    &d- report &5—— &aCheck Mirror Data.'
+  - '    &d- clear &5—— &aClear Mirror Data'
+  - '    &d- &eengine'
+  - '      &7- &einfo &5—— &bCheck running engine.'
+  - '      &7- &estop {Engine ID} &5—— &bStop a running engine'
   - '    &d- &ereload &5—— &aReload Pouvoir'
   - '  &6================================'
 wrong-command-message: '&d[&9Pouvoir&d] &cWrong command!'
+command-clear: '&d[&9Pouvoir&d] &aMirrorData has been cleared!'
    
 
