--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -2,14 +2,16 @@ plugin-prefix: '&d[&9Pouvoir&d] '
 plugin-debug: '&d[&9Pouvoir-Debug&d] '
 command-reload: '&d[&9Pouvoir&d] &aPouvoir 已重载!'
 command-script-invoke: '&d[&9Pouvoir&d] &a正在调用脚本 &6{0} &a!'
+command-script-invoke-end: "&d[&9Pouvoir&d] &e脚本 &6{0} &e返回值: &b{1} &e, 耗时 &9{2}ms"
 command-script-wrong: '&d[&9Pouvoir&d] &c在调用脚本 &6{0} &c时发生了错误!'
 static-class-not-found: '&d[&9Pouvoir&d] &c未发现类 &6{0} &c!'
 script-compile-start: '&d[&9Pouvoir&d] &a开始编译 &6{0}&a...'
-script-compile-end: '&d[&9Pouvoir&d] &a编译成功! 耗时 &9{0}ms!'
+script-compile-end: '&d[&9Pouvoir&d] &a脚本 &6{0} &a编译成功! 耗时 &9{1}ms!'
 script-compile-fail: '&d[&9Pouvoir&d] &c在编译 &6{0} &c时发生了错误! 请检查.'
 script-file-not-found: '&d[&9Pouvoir&d] &c未发现脚本文件 &6{0} &c! 请检查.'
 script-invoke-script-exception: '&d[&9Pouvoir&d] &c在调用脚本 &6{1} &c的函数 &d{0} &c时发生了错误! &7(可能是调用了不存在的方法/函数)'
 script-invoke-exception: '&d[&9Pouvoir&d] &c在调用脚本 &6{1} &c的函数 &d{0} &c时发生了错误!'
+script-invoke-task-cancelled: '&d[&9Pouvoir&d] &c调用 &6{1} &c的函数 &d{0} &c的任务取消!'
 script-invoke-wrong-format: '&d[&9Pouvoir&d] &c如果你想调用某个脚本文件的函数, 请以此格式输入: &6脚本文件名称.js::函数名 &c!'
 script-engine-not-found: '&d[&9Pouvoir&d] &c未发现PouScriptEngine &6{0} &c! 请检查.'
 script-engine-valid-suffix: '&d[&9Pouvoir&d] &c未发现含后缀 &6{0} &c的PouScriptEngine&c! 请检查.'
@@ -18,8 +20,17 @@ pou-placeholder-register: '&d[&9Pouvoir&d] &ePou占位符 &6{0} &e注册成功! 
 command-message:
   - '&6================================'
   - ' &9指令列表:'
+  - '  &6/pouvoir'
   - '    &d- &ehelp &5—— &a显示帮助.'
-  - '    &d- &erun &b脚本路径 函数名 (参数) &5—— &a运行一个脚本(函数)'
-  - '    &d- &ereload &5—— &a重载插件'
+  - '    &d- &einfo &5—— &a显示插件信息.'
+  - '    &d- &erun &b脚本路径 (函数名) (参数) &5—— &b运行一个脚本函数'
+  - '    &d- &ereport &5—— &b查看耗时数据'
+  - '    &d- &eclear &5—— &b清除耗时数据'
+  - '    &d- &eengine'
+  - '      &7- &einfo &5—— &b查看引擎池信息'
+  - '      &7- &estop {引擎id} &5—— &b让一个引擎停止工作'
+  - '    &d- &ereload &5—— &b重载插件'
   - '  &6================================'
 wrong-command-message: '&d[&9Pouvoir&d] &c你是不是输错指令啦!'
+command-clear: '&d[&9Pouvoir&d] &a耗时数据已清楚!'
+
