--- a/src/main/resources/lang/en_US.yml
+++ b/src/main/resources/lang/en_US.yml
@@ -9,8 +9,8 @@ script-compile-start: '&d[&9Pouvoir&d] &aStart to compile &6{0}&a...'
 script-compile-end: '&d[&9Pouvoir&d] &aCompiled &6{0} &asuccessfully in &9{1}ms!'
 script-compile-fail: '&d[&9Pouvoir&d] &cThere was an error during compiling the script &6{0} &c! Please check.'
 script-file-not-found: '&d[&9Pouvoir&d] &cCan t found the script file &6{0} &c! Please check.'
-script-invoke-script-exception: '&d[&9Pouvoir&d] &cThere was a error while invoke the function &6{0} &cof &d{1} &c! &7(maybe you invoke a function that doesn t exist)'
-script-invoke-exception: '&d[&9Pouvoir&d] &cThere was a error while invoke the function &6{0} &cof &d{1} &c!'
+script-invoke-script-exception: '&d[&9Pouvoir&d] &cError while invoke the function &6{0} &cof &d{1} &c! Task ID: &6{2}'
+script-invoke-exception: '&d[&9Pouvoir&d] &cError while invoke the function &6{0} &cof &d{1} &c! Task ID: &6{2}'
 script-invoke-wrong-format: '&d[&9Pouvoir&d] &cIf you wanna invoke script file`s function, you should write it in this format: &6{file`s path}.js::{function`s name} &c instead of &4{0}!'
 script-engine-not-found: '&d[&9Pouvoir&d] &cCan t found the PouScriptEngine &6{0} &c! Please check.'
 script-engine-valid-suffix: '&d[&9Pouvoir&d] &cCan t found the PouScriptEngine with suffix &6{0} &c! Please check.'
@@ -24,12 +24,36 @@ command-message:
   - '    &d- &erun &bscript file path function (args) &5—— &aRun a function of a script'
   - '    &d- report &5—— &aCheck Mirror Data.'
   - '    &d- clear &5—— &aClear Mirror Data'
-  - '    &d- &eengine'
-  - '      &7- &einfo &5—— &bCheck running engine.'
-  - '      &7- &estop {Engine ID} &5—— &bStop a running engine'
+  - '    &d- &etask'
+  - '      &7- &einfo &5—— &aCheck Script Task Info.'
+  - '      &7- &estop {Task ID} &5—— &aStop a running task.'
   - '    &d- &ereload &5—— &aReload Pouvoir'
   - '  &6================================'
 wrong-command-message: '&d[&9Pouvoir&d] &cWrong command!'
 command-clear: '&d[&9Pouvoir&d] &aMirrorData has been cleared!'
-   
+command-task-info: '&eRunning Tasks Info:'
+running-task-empty: '&7No running tasks.'
+command-stop-task: '&d[&9Pouvoir&d] &cTask &6{0} &chas been cancelled!'
 
+script-invoking-info: "&eInvoking script &6{0} &e's function &d{1}"
+script-invoking-arguments: "&eArguments: "
+script-invoking-parameters: "&eParameters: "
+
+annotation-listener-register: '&d[&9Pouvoir&d] &aScript Listener &6{0} &ahas been registered!'
+annotation-listener-unregister: '&d[&9Pouvoir&d] &cScript Listener &6{0} &chas been unregistered!'
+annotation-function-register: '&d[&9Pouvoir&d] &aScript Function &6{0} &ahas been registered!'
+annotation-function-unregister: '&d[&9Pouvoir&d] &cScript Function &6{0} &chas been unregistered!'
+annotation-awake-register: '&d[&9Pouvoir&d] &aScript Awake &6{0} &ahas been registered!'
+annotation-awake-unregister: '&d[&9Pouvoir&d] &cScript Awake &6{0} &chas been unregistered!'
+annotation-awake-running: '&d[&9Pouvoir&d] &aScript Awake &6{0} &ais running!'
+annotation-annotation-register: '&d[&9Pouvoir&d] &aScript Annotation &6{0} &ahas been registered!'
+annotation-annotation-unregister: '&d[&9Pouvoir&d] &cScript Annotation &6{0} &chas been unregistered!'
+
+kotlin-unit: '&7null'
+class-not-found: '&d[&9Pouvoir&d] &cClass &6{0} &cdosen`t exist!'
+wrong-config: '&d[&9Pouvoir&d] &cConfig &6{0} &cis wrong!'
+wrong-config-cause: '&d[&9Pouvoir&d] &cCause: &f{1}'
+
+plugin-load: '&d[&9{0}&d] &6{0} &ahas been loaded!'
+plugin-enable: '&d[&9{0}&d] &6{0} &ahas been enabled!'
+plugin-disable: '&d[&9{0}&d] &6{0} &chas been disabled!'
