--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -3,15 +3,14 @@ plugin-debug: '&d[&9Pouvoir-Debug&d] '
 command-reload: '&d[&9Pouvoir&d] &aPouvoir 已重载!'
 command-script-invoke: '&d[&9Pouvoir&d] &a正在调用脚本 &6{0} &a!'
 command-script-invoke-end: "&d[&9Pouvoir&d] &e脚本 &6{0} &e返回值: &b{1} &e, 耗时 &9{2}ms"
-command-script-wrong: '&d[&9Pouvoir&d] &c在调用脚本 &6{0} &c时发生了错误!'
 static-class-not-found: '&d[&9Pouvoir&d] &c未发现类 &6{0} &c!'
 script-compile-start: '&d[&9Pouvoir&d] &a开始编译 &6{0}&a...'
 script-compile-end: '&d[&9Pouvoir&d] &a脚本 &6{0} &a编译成功! 耗时 &9{1}ms!'
 script-compile-fail: '&d[&9Pouvoir&d] &c在编译 &6{0} &c时发生了错误! 请检查.'
 script-file-not-found: '&d[&9Pouvoir&d] &c未发现脚本文件 &6{0} &c! 请检查.'
-script-invoke-script-exception: '&d[&9Pouvoir&d] &c在调用脚本 &6{1} &c的函数 &d{0} &c时发生了错误! &7(可能是调用了不存在的方法/函数)'
-script-invoke-exception: '&d[&9Pouvoir&d] &c在调用脚本 &6{1} &c的函数 &d{0} &c时发生了错误!'
-script-invoke-task-cancelled: '&d[&9Pouvoir&d] &c调用 &6{1} &c的函数 &d{0} &c的任务取消!'
+script-invoke-script-exception: '&d[&9Pouvoir&d] &c在调用脚本 &6{1} &c的函数 &d{0} &c时发生了错误! 任务ID: &6{2}'
+script-invoke-exception: '&d[&9Pouvoir&d] &c在调用脚本 &6{1} &c的函数 &d{0} &c时发生了错误! 任务ID: &6{2}'
+script-invoke-task-cancelled: '&d[&9Pouvoir&d] &c调用 &6{1} &c的函数 &d{0} &c的任务 &6{2} &c取消!'
 script-invoke-wrong-format: '&d[&9Pouvoir&d] &c如果你想调用某个脚本文件的函数, 请以此格式输入: &6脚本文件名称.js::函数名 &c!'
 script-engine-not-found: '&d[&9Pouvoir&d] &c未发现PouScriptEngine &6{0} &c! 请检查.'
 script-engine-valid-suffix: '&d[&9Pouvoir&d] &c未发现含后缀 &6{0} &c的PouScriptEngine&c! 请检查.'
@@ -23,14 +22,39 @@ command-message:
   - '  &6/pouvoir'
   - '    &d- &ehelp &5—— &a显示帮助.'
   - '    &d- &einfo &5—— &a显示插件信息.'
-  - '    &d- &erun &b脚本路径 (函数名) (参数) &5—— &b运行一个脚本函数'
-  - '    &d- &ereport &5—— &b查看耗时数据'
-  - '    &d- &eclear &5—— &b清除耗时数据'
-  - '    &d- &eengine'
-  - '      &7- &einfo &5—— &b查看引擎池信息'
-  - '      &7- &estop {引擎id} &5—— &b让一个引擎停止工作'
-  - '    &d- &ereload &5—— &b重载插件'
+  - '    &d- &erun &b脚本路径 (函数名) (参数) &5—— &a运行一个脚本函数'
+  - '    &d- &ereport &5—— &a查看耗时数据'
+  - '    &d- &eclear &5—— &a清除耗时数据'
+  - '    &d- &etask'
+  - '      &7- &einfo &5—— &a查看脚本任务信息'
+  - '      &7- &estop {Task ID} &5—— &a停止一个任务'
+  - '    &d- &ereload &5—— &a重载插件'
   - '  &6================================'
 wrong-command-message: '&d[&9Pouvoir&d] &c你是不是输错指令啦!'
 command-clear: '&d[&9Pouvoir&d] &a耗时数据已清楚!'
+command-task-info: '&e正在运行的任务:'
+command-task-empty: '&7没有正在运行的任务!'
+command-task-stop: '&d[&9Pouvoir&d] &c任务 &6{0} 已取消!'
 
+script-invoking-info: "&e正在调用脚本 &6{0} &e的函数 &d{1}"
+script-invoking-arguments: "&e全局参数: "
+script-invoking-parameters: "&e函数参数: "
+
+annotation-listener-register: '&d[&9Pouvoir&d] &a脚本监听器 &6{0} &a注册成功!'
+annotation-listener-unregister: '&d[&9Pouvoir&d] &c脚本监听器 &6{0} &c已注销!'
+annotation-function-register: '&d[&9Pouvoir&d] &a脚本函数 &6{0} &a注册成功!'
+annotation-function-unregister: '&d[&9Pouvoir&d] &c脚本函数 &6{0} &c已注销!'
+annotation-awake-register: '&d[&9Pouvoir&d] &a脚本启动器 &6{0} &a注册成功!'
+annotation-awake-unregister: '&d[&9Pouvoir&d] &c脚本启动器 &6{0} &c已注销!'
+annotation-awake-running: '&d[&9Pouvoir&d] &c脚本启动器 &6{0} &c正在运行!'
+annotation-annotation-register: '&d[&9Pouvoir&d] &a脚本注解 &6{0} &a注册成功!'
+annotation-annotation-unregister: '&d[&9Pouvoir&d] &c脚本注解 &6{0} &c已注销!'
+
+kotlin-unit: '&7无'
+class-not-found: '&d[&9Pouvoir&d] &c未发现类 &6{0} &c! 请检查.'
+wrong-config: '&d[&9Pouvoir&d] &c配置文件 &6{0} &c错误! 请检查.'
+wrong-config-cause: '&d[&9Pouvoir&d] &c原因: {1}'
+
+plugin-load: '&d[&9{0}&d] &6{0} &a加载成功!'
+plugin-enable: '&d[&9{0}&d] &6{0} &a启用成功!'
+plugin-disable: '&d[&9{0}&d] &6{0} &c关闭成功!'
