--- a/src/main/resources/lang/en_US.yml
+++ b/src/main/resources/lang/en_US.yml
@@ -9,8 +9,6 @@ script-compile-start: '&d[&9Pouvoir&d] &aStart to compile &6{0}&a...'
 script-compile-end: '&d[&9Pouvoir&d] &aCompiled &6{0} &asuccessfully in &9{1}ms!'
 script-compile-fail: '&d[&9Pouvoir&d] &cThere was an error during compiling the script &6{0} &c! Please check.'
 script-file-not-found: '&d[&9Pouvoir&d] &cCan t found the script file &6{0} &c! Please check.'
-script-invoke-script-exception: '&d[&9Pouvoir&d] &cError while invoke the function &6{0} &cof &d{1} &c! Task ID: &6{2}'
-script-invoke-exception: '&d[&9Pouvoir&d] &cError while invoke the function &6{0} &cof &d{1} &c! Task ID: &6{2}'
 script-invoke-wrong-format: '&d[&9Pouvoir&d] &cIf you wanna invoke script file`s function, you should write it in this format: &6{file`s path}.js::{function`s name} &c instead of &4{0}!'
 script-engine-not-found: '&d[&9Pouvoir&d] &cCan t found the PouScriptEngine &6{0} &c! Please check.'
 script-engine-valid-suffix: '&d[&9Pouvoir&d] &cCan t found the PouScriptEngine with suffix &6{0} &c! Please check.'
@@ -24,21 +22,17 @@ command-message:
   - '    &d- &erun &bscript file path function (args) &5—— &aRun a function of a script'
   - '    &d- report &5—— &aCheck Mirror Data.'
   - '    &d- clear &5—— &aClear Mirror Data'
-  - '    &d- &etask'
-  - '      &7- &einfo &5—— &aCheck Script Task Info.'
-  - '      &7- &estop {Task ID} &5—— &aStop a running task.'
   - '    &d- &ereload &5—— &aReload Pouvoir'
   - '&f&m─&6&m────────────────────────────────&6&f&m─'
 wrong-command-message: '&d[&9Pouvoir&d] &cWrong command!'
 command-clear: '&d[&9Pouvoir&d] &aMirrorData has been cleared!'
-command-task-info: '&eRunning Tasks Info:'
-running-task-empty: '&7No running tasks.'
-command-task-stop: '&d[&9Pouvoir&d] &cTask &6{0} &chas been cancelled!'
 command-switch-message: '&d[&9Pouvoir&d] &aYou selected the message type &6{0} &a!'
 
 script-invoking-info: "&eInvoking script &6{0} &e's function &d{1}"
 script-invoking-arguments: "&eArguments: "
 script-invoking-parameters: "&eParameters: "
+
+script-global-js-not-found: '&d[&9Pouvoir&d] &cNo such file called &6{0} &c!'
 
 annotation-listener-register: '&d[&9Pouvoir&d] &aScript Listener &6{0} &ahas been registered!'
 annotation-listener-unregister: '&d[&9Pouvoir&d] &cScript Listener &6{0} &chas been unregistered!'
