--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -20,7 +20,7 @@ command-message:
   - '    &d- &ehelp &5—— &a显示帮助.'
   - '    &d- &einfo &5—— &a显示插件信息.'
   - '    &d- &erun &b脚本类型 脚本路径 (函数名) (参数) &5—— &a运行一个脚本函数'
-  - '    &d- &erun &b脚本类型 脚本内容 &5—— &a执行脚本'
+  - '    &d- &eeval &b脚本类型 脚本内容 &5—— &a执行脚本'
   - '    &d- &ereport &5—— &a查看耗时数据'
   - '    &d- &eclear &5—— &a清除耗时数据'
   - '    &d- &ereload &5—— &a重载插件'
